--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "barryvdh/laravel-dompdf": "^0.8.7",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
+        "h4cc/wkhtmltoimage-amd64": "0.12.x",
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
+        "laraveldaily/laravel-invoices": "1.3",
         "needim/noty": "^3.1",
         "yajra/laravel-datatables-oracle": "^9.10"
     },
