--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "ext-gd": "*",
         "barryvdh/laravel-dompdf": "^0.8.7",
         "consoletvs/invoices": "^1.6",
         "fideloper/proxy": "^4.2",
