--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
-        "ext-gd": "*",
         "barryvdh/laravel-dompdf": "^0.8.7",
         "consoletvs/invoices": "^1.6",
         "fideloper/proxy": "^4.2",
@@ -21,7 +20,8 @@
         "laravel/ui": "^2.1",
         "laraveldaily/laravel-invoices": "1.3",
         "needim/noty": "^3.1",
-        "yajra/laravel-datatables-oracle": "^9.10"
+        "yajra/laravel-datatables-oracle": "^9.10",
+        "ext-gd": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
